# kafka-pg-exercise

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
test/: conftest.py  stubs.py  test_consumer.py  test_healthchecker.py  test_producer.py
websitechecker/: clients.py  config.py  healthchecker.py  main.py  migration.py
